--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "chu-switch-tab",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "description": "通过自定义按键，以达到控制页面表格等元素切换的功能",
   "main": "index.js",
   "scripts": {
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/CHU295/swtich-tab.git"
+    "url": "git+https://github.com/CHU295/switch-tab.git"
   },
   "keywords": [
     "javascript"
@@ -16,7 +16,7 @@
   "author": "chu",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/CHU295/swtich-tab/issues"
+    "url": "https://github.com/CHU295/switch-tab/issues"
   },
-  "homepage": "https://github.com/CHU295/swtich-tab#readme"
+  "homepage": "https://github.com/CHU295/switch-tab#readme"
 }
